# wine-quality-predictions

./: .gitignore  Makefile  README.md  notebook.ipynb  pyproject.toml
